--- a/blocks/info/info.css
+++ b/blocks/info/info.css
@@ -7,3 +7,10 @@
   "avatar description";
   column-gap: 16px;
 }
+
+@media screen and (min-width: 768px) {
+  .info {
+    grid-template-rows: 33px;
+    grid-template-columns: 88px 200px;
+  }
+}
