--- a/blocks/case/__avatar/case__avatar.css
+++ b/blocks/case/__avatar/case__avatar.css
@@ -5,3 +5,10 @@
   border-radius: 50%;
   background-color: #F1F3F5;
 }
+
+@media screen and (min-width: 768px) {
+  .case__avatar {
+    margin: 48px 0 0 30px;
+    grid-area: avatar;
+  }
+}
