--- a/blocks/case/__schild/case__schild.css
+++ b/blocks/case/__schild/case__schild.css
@@ -1,3 +1,10 @@
 .case__schild {
   margin: 24px 0 11px 24px;
 }
+
+@media screen and (min-width: 768px) {
+  .case__schild {
+    margin: 48px 0 0 48px;
+    grid-area: schild;
+  }
+}
