--- a/blocks/info/__avatar/info__avatar.css
+++ b/blocks/info/__avatar/info__avatar.css
@@ -9,3 +9,10 @@
   justify-content: start;
   align-self: center;
 }
+
+@media screen and (min-width: 768px) {
+  .info__avatar {
+    align-self: end;
+    justify-self: end;
+  }
+}
