--- a/blocks/case/__title-result/_large/case__title-result_large.css
+++ b/blocks/case/__title-result/_large/case__title-result_large.css
@@ -1,3 +1,9 @@
+@media screen and (max-width: 767px) {
+  .case__title-result_large {
+    display: none;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .case__title-result_large {
     font-weight: 400;
