--- a/blocks/case/__list/case__list.css
+++ b/blocks/case/__list/case__list.css
@@ -1,15 +1,16 @@
 .case__list {
   margin: 0;
   padding: 0;
-  font-weight: 400;
-  font-size: 15px;
-  line-height: 24px;
-  list-style-type: none;
-  color: #808C9E;
 }
 
 @media screen and (min-width: 768px) {
   .case__list {
     margin: 8px 0 0 48px
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .case__list {
+    margin: 0 0 0 48px;
   }
 }
