--- a/blocks/case/__subtitle-header/case__subtitle-header.css
+++ b/blocks/case/__subtitle-header/case__subtitle-header.css
@@ -5,6 +5,7 @@
   color: #808C9E;
   margin: 0 0 8px 24px;
 }
+
 @media screen and (min-width: 768px) {
   .case__subtitle-header {
     margin: 29px 0 0 48px;
@@ -12,3 +13,10 @@
   }
 }
 
+@media screen and (min-width: 1280px) {
+  .case__subtitle-header {
+    font-size: 17px;
+    line-height: 28px;
+    margin: 0 0 8px 48px;
+  }
+}
