--- a/blocks/case/__title/case__title.css
+++ b/blocks/case/__title/case__title.css
@@ -3,11 +3,20 @@
   font-size: 21px;
   line-height: 28px;
   margin: 35px 0 16px 24px;
+  font-feature-settings: 'liga' off;
   color: #333;
 }
 
 @media screen and (min-width: 768px) {
   .case__title {
     margin: 47px 0 12px 47px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .case__title {
+    font-size: 28px;
+    line-height: 32px;
+    margin: 48px 0 16px 48px
   }
 }
